Hide company rating title

--- a/sites/all/themes/horki2/css/global.css
+++ b/sites/all/themes/horki2/css/global.css
@@ -2669,6 +2669,10 @@ ul.tabs li.active a {
 }
 
 /* company node */
+.node-company .content:first-child label {
+    display: none;
+}
+
 .node-company .rate-widget {
     margin-bottom: 10px;
     width: 110px;
