--- a/sites/all/themes/horki2/css/global.css
+++ b/sites/all/themes/horki2/css/global.css
@@ -2277,17 +2277,13 @@ ul.tabs li.active a {
     margin-bottom: 35px;
 }
 
-.node .group-actions {
-    overflow: auto;
-    margin-bottom: 10px;
-    border-top: 1px solid #DBDBDB;
-    padding-top: 10px;
-}
-
 .node .group-share {
     float: left;
     overflow: auto;
-    margin: 0 50px 0 0;
+    width: 100%;
+    margin-bottom:15px;
+    border-top: 1px solid #DBDBDB;
+    padding-top: 15px;
     vertical-align: middle;
 }
 
@@ -2295,22 +2291,23 @@ ul.tabs li.active a {
     font-family: 'PTSans Caption', sans-serif;
     float: left;
     font-weight: bold;
-    margin-top: 15px;
     margin-right: 25px;
 }
 
-.node .group-share > .field {
-    float: left;
+.node .group-share img {
+    margin-right: 5px;
 }
 
 .node .group-tags {
     float: left;
-    margin: 15px 0 10px 0;
     overflow: auto;
+    margin: 0 0 20px 0;
+    padding-top: 22px;
     vertical-align: middle;
 }
 
 .node .group-tags > h3 {
+    font-family: 'PTSans Caption', sans-serif;
     float: left;
     margin-right: 25px;
 }
