--- a/sites/all/themes/horki2/css/global.css
+++ b/sites/all/themes/horki2/css/global.css
@@ -445,6 +445,14 @@ html body.admin-menu {
     content: url('/sites/default/files/icons/social/vk.svg');
 }
 
+.mobile-menu-item-tiktok a {
+    content: url('/sites/default/files/icons/social/tiktok.svg');
+}
+
+.mobile-menu-item-youtube a {
+    content: url('/sites/default/files/icons/social/youtube.svg');
+}
+
 .mobile-menu-item-twitter a {
     content: url('/sites/default/files/icons/social/twitter.svg');
 }
@@ -2302,7 +2310,7 @@ ul.tabs li.active a {
     float: left;
     overflow: auto;
     margin: 0 0 20px 0;
-    padding-top: 22px;
+    padding-top: 10px;
     vertical-align: middle;
 }
 
